Fixes #34: fix a number of layout issues with Dashboard/LocationDetails

--- a/frontend/src/index.sass
+++ b/frontend/src/index.sass
@@ -30,6 +30,9 @@ $card-focus-box-shadow-color: bulmaRgba($link, 0.25)
 .hero-body
   justify-content: center
   align-items: stretch
+  +mobile
+    padding-left: 0
+    padding-right: 0
 .hero-foot
   margin-bottom: 0.5rem
 
